# aoc2023

./: README.md  pyproject.toml
app/day00/: parts.js  parts.ml
app/day01/: parts.js  parts.ml  parts.py
app/day02/: dune  parts.js  parts.ml  parts.py
app/day03/: parts.js  parts.ml  parts.py
app/day04/: parts.js  parts.ml  parts.py
app/day05/: parts.py
app/day06/: parts.js  parts.ml  parts.py
app/day07/: parts.py
app/day08/: parts.py
app/support/: utils.js  utils.py
tests/day01/: solution_test.py
tests/day02/: solution_test.py
tests/day03/: solution_test.py
tests/day04/: solution_test.py
tests/day05/: solution_test.py
tests/day06/: solution_test.py
tests/day07/: solution_test.py
tests/day08/: solution_test.py
