[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = "Advent of Code 2023"
authors = ["Rodolfo De Nadai <rdenadai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.7"
black = "^22.10.0"
flake8 = "^6.0.0"
mccabe = "^0.7.0"
mypy = "^0.991"
bandit = "^1.7.4"
debugpy = "^1.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
